--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,3 +39,28 @@ jobs:
         with:
           go-version-input: 1.24.2
           go-package: ./...
+
+
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Install Dependencies
+        run: go mod tidy
+      - name: Run Tests
+        run: go test -v ./...
+
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Build Application
+        run: go build -o myapp ./...
