--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -63,4 +63,4 @@ jobs:
         with:
           go-version: stable
       - name: Build Application
-        run: go build -o myapp ./...
+        run: go build -v ./...
