--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - main
-      - master
   pull_request:
+  branches:
+      - main
 
 permissions:
   contents: read
@@ -42,6 +43,7 @@ jobs:
 
 
   test:
+    needs: [golangci, govulncheck]
     name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
@@ -55,6 +57,7 @@ jobs:
         run: go test -v ./...
 
   build:
+    needs: test
     name: Build Project
     runs-on: ubuntu-latest
     steps:
