--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -69,13 +69,13 @@ jobs:
         run: go build -v ./...
 
 
-    format:
-    name: Format Code
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: stable
-      - name: Run Go Fmt
-        run: go fmt -v ./...
+    # format:
+    # name: Format Code
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - uses: actions/checkout@v4
+    #   - uses: actions/setup-go@v5
+    #     with:
+    #       go-version: stable
+    #   - name: Run Go Fmt
+    #     run: go fmt -v ./...
