added format, dependency scan and security checks to workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,8 +56,45 @@ jobs:
       - name: Run Tests
         run: go test -v ./...
 
+    format:
+     needs: test
+    name: Format Code
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Run Go Fmt
+        run: go fmt  ./...
+
+  security_scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@v2
+        with:
+          args: ./...
+
+  dependency_check:
+    name: Check Dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Verify Go Modules
+        run: go mod verify
+
+
   build:
-    needs: test
+    needs: [format, security_scan, dependency_check]
     name: Build Project
     runs-on: ubuntu-latest
     steps:
@@ -67,15 +104,3 @@ jobs:
           go-version: stable
       - name: Build Application
         run: go build -v ./...
-
-
-    # format:
-    # name: Format Code
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - uses: actions/checkout@v4
-    #   - uses: actions/setup-go@v5
-    #     with:
-    #       go-version: stable
-    #   - name: Run Go Fmt
-    #     run: go fmt -v ./...
