fixed security scan check error

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -77,6 +77,12 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+      - name: Install Gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run Gosec Security Scan
+        run: gosec ./...
+
       - name: Run Gosec Security Scanner
         uses: securego/gosec-action@v2
         with:
